gke/postinstall/oidc/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxy
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - apiserver.lab.sspcloud.fr
  rules:
    - host: apiserver.lab.sspcloud.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: oidc-kube-oidc-proxy
              servicePort: 443
